# backend/docs/swagger.json
@@ -16,24 +16,12 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "name": "q1",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "maxLength": 3,
-                        "type": "string",
-                        "name": "q2",
+                        "name": "dateUtc",
                         "in": "query"
                     },
                     {
                         "type": "string",
-                        "name": "q3",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "name": "q4",
+                        "name": "email",
                         "in": "query"
                     },
                     {
@@ -42,12 +30,25 @@
                             "type": "integer"
                         },
                         "collectionFormat": "csv",
-                        "name": "q5",
+                        "name": "intArray",
                         "in": "query"
                     },
                     {
                         "type": "string",
-                        "name": "q6",
+                        "name": "q1",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "maxLength": 3,
+                        "minLength": 2,
+                        "type": "string",
+                        "name": "q2",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "uuid",
                         "in": "query"
                     }
                 ],
@@ -59,7 +60,13 @@
                         }
                     },
                     "400": {
-                        "description": "検証エラー",
+                        "description": "不正なリクエスト",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "想定外のエラー",
                         "schema": {
                             "$ref": "#/definitions/handler.ErrorResponse"
                         }
@@ -67,7 +74,7 @@
                 }
             }
         },
-        "/surveyors/query": {
+        "/surveyors": {
             "get": {
                 "tags": [
                     "surveyors"
@@ -75,11 +82,29 @@
                 "summary": "指定した事業所の調査員のリストを返す",
                 "parameters": [
                     {
+                        "maxLength": 6,
                         "type": "string",
-                        "description": "事業所のid",
-                        "name": "q",
-                        "in": "query",
-                        "required": true
+                        "example": "000001",
+                        "name": "id",
+                        "in": "query"
+                    },
+                    {
+                        "maxLength": 2,
+                        "type": "string",
+                        "example": "XX",
+                        "name": "office-id",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            "basic",
+                            "detail"
+                        ],
+                        "type": "string",
+                        "example": "detail",
+                        "description": "表示形式を指定するパラメータ",
+                        "name": "view",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -88,12 +113,18 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/handler.Surveyor"
+                                "$ref": "#/definitions/handler.GetSurveyorsResponse"
                             }
                         }
                     },
                     "400": {
-                        "description": "検証エラー",
+                        "description": "不正なリクエスト",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "想定外のエラー",
                         "schema": {
                             "$ref": "#/definitions/handler.ErrorResponse"
                         }
@@ -106,13 +137,24 @@
         "handler.ErrorResponse": {
             "type": "object",
             "properties": {
+                "code": {
+                    "type": "string",
+                    "example": "INVALID_REQUEST"
+                },
+                "details": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    },
+                    "example": [
+                        "aaa",
+                        "bbb",
+                        "ccc"
+                    ]
+                },
                 "message": {
                     "type": "string",
-                    "example": "status bad request"
-                },
-                "status": {
-                    "type": "integer",
-                    "example": 400
+                    "example": "不正なリクエストです"
                 }
             }
         },
@@ -121,15 +163,15 @@
             "properties": {
                 "id": {
                     "type": "string",
-                    "example": "000001"
+                    "example": "11111"
                 },
                 "name": {
                     "type": "string",
-                    "example": "調査員1"
+                    "example": "サンプル1"
                 }
             }
         },
-        "handler.Surveyor": {
+        "handler.GetSurveyorsResponse": {
             "type": "object",
             "properties": {
                 "id": {
@@ -139,6 +181,15 @@
                 "name": {
                     "type": "string",
                     "example": "調査員1"
+                },
+                "office": {
+                    "description": "omitemptyをつけると、nilの場合はJSONに出力されません",
+                    "type": "string",
+                    "example": "札幌事業所"
+                },
+                "office-id": {
+                    "type": "string",
+                    "example": "XX"
                 }
             }
         }
